Correct Rakefile to copy PDF docs into place.

--- a/web/Rakefile
+++ b/web/Rakefile
@@ -36,7 +36,7 @@ task :build do
   if check_hash()
     puts("Already built")
   else
-    # sh "(cd ../lec; make; make copy)"
+    sh "(cd ../lec; make; make copy)"
     # sh "(cd ../hw; make; make copy)"
     sh "jekyll build"
   end
