First lecture notes...

--- a/web/_data/lectures.yml
+++ b/web/_data/lectures.yml
@@ -10,6 +10,7 @@
 -
   date: 2018-06-12
   info: Introduction and optimization basics
+  notes: 2018-06-12.pdf
 -
   date: 2018-06-13
   info: Gradient descent and Newton
