--- a/web/_data/lectures.yml
+++ b/web/_data/lectures.yml
@@ -11,6 +11,9 @@
   date: 2018-06-12
   info: Introduction and optimization basics
   notes: 2018-06-12.pdf
+  hw:
+    info: HW 1 (due 06-19)
+    file: 2018-06-12.pdf
 -
   date: 2018-06-13
   info: Gradient descent and Newton
