Fix info in HW.

--- a/web/_data/lectures.yml
+++ b/web/_data/lectures.yml
@@ -12,8 +12,8 @@
   info: Introduction and optimization basics
   notes: 2018-06-12.pdf
   hw:
-    info: HW 1 (due 06-19)
-    file: 2018-06-12.pdf
+    - info: HW 1 (due 06-19)
+      file: 2018-06-12.pdf
 -
   date: 2018-06-13
   info: Gradient descent and Newton
