Update lecture notes link from web page.

--- a/web/_data/lectures.yml
+++ b/web/_data/lectures.yml
@@ -17,6 +17,7 @@
 -
   date: 2018-06-13
   info: Linear least squares and regularization
+  notes: 2018-06-13.pdf
 -
   date: 2018-06-14
   info: Gradient descent and Newton
