--- a/web/Rakefile
+++ b/web/Rakefile
@@ -37,7 +37,7 @@ task :build do
     puts("Already built")
   else
     sh "(cd ../lec; make; make copy)"
-    # sh "(cd ../hw; make; make copy)"
+    sh "(cd ../hw; make; make copy)"
     sh "jekyll build"
   end
 end
