--- a/hw/Makefile
+++ b/hw/Makefile
@@ -2,7 +2,8 @@ TEXINPUTS:=.
 
 HW= \
 	pdf/2018-06-12.pdf \
-	pdf/2018-06-13.pdf
+	pdf/2018-06-13.pdf \
+	pdf/2018-06-15.pdf
 
 .PHONY: all copy
 all: $(HW)
