--- a/hw/Makefile
+++ b/hw/Makefile
@@ -5,21 +5,10 @@ HW= \
 	pdf/2018-06-13.pdf \
 	pdf/2018-06-15.pdf
 
-HWS= \
-	pdf/2018-06-12s.pdf \
-	pdf/2018-06-13s.pdf \
-	pdf/2018-06-15s.pdf
-
-.PHONY: all sol copy
+.PHONY: all copy
 all: $(HW)
 
-sol: $(HWS)
-
 pdf/%.pdf: tex/%.tex
-	xelatex -output-dir pdf $<
-	xelatex -output-dir pdf $<
-
-pdf/%.pdf: texs/%.tex
 	xelatex -output-dir pdf $<
 	xelatex -output-dir pdf $<
 
