Added 6/19 lecture notes.

--- a/lec/Makefile
+++ b/lec/Makefile
@@ -5,7 +5,8 @@ LEC= \
 	pdf/2018-06-12.pdf \
 	pdf/2018-06-13.pdf \
 	pdf/2018-06-14.pdf \
-	pdf/2018-06-15.pdf
+	pdf/2018-06-15.pdf \
+	pdf/2018-06-19.pdf 
 
 .PHONY: all copy
 all: $(LEC)
