--- a/web/_data/lectures.yml
+++ b/web/_data/lectures.yml
@@ -39,6 +39,7 @@
 -
   date: 2018-06-19
   info: Latent factor models
+  notes: 2018-06-19.pdf
 -
   date: 2018-06-20
   info: SVD and other low rank decompositions
