Added HW for 6/19 class.

--- a/web/_data/lectures.yml
+++ b/web/_data/lectures.yml
@@ -40,6 +40,9 @@
   date: 2018-06-19
   info: Latent factor models
   notes: 2018-06-19.pdf
+  hw:
+    - info: HW 4 (due 06-26)
+      file: 2018-06-19.pdf
 -
   date: 2018-06-20
   info: SVD and other low rank decompositions
