--- a/hw/Makefile
+++ b/hw/Makefile
@@ -3,7 +3,8 @@ TEXINPUTS:=.
 HW= \
 	pdf/2018-06-12.pdf \
 	pdf/2018-06-13.pdf \
-	pdf/2018-06-15.pdf
+	pdf/2018-06-15.pdf \
+	pdf/2018-06-19.pdf
 
 .PHONY: all copy
 all: $(HW)
