--- a/lec/Makefile
+++ b/lec/Makefile
@@ -6,7 +6,8 @@ LEC= \
 	pdf/2018-06-13.pdf \
 	pdf/2018-06-14.pdf \
 	pdf/2018-06-15.pdf \
-	pdf/2018-06-19.pdf 
+	pdf/2018-06-19.pdf \
+	pdf/2018-06-20.pdf
 
 .PHONY: all copy
 all: $(LEC)
