--- a/web/_data/lectures.yml
+++ b/web/_data/lectures.yml
@@ -46,6 +46,7 @@
 -
   date: 2018-06-20
   info: SVD and other low rank decompositions
+  notes: 2018-06-20.pdf
 -
   date: 2018-06-21
   info: Non-negative matrix factorization
