--- a/web/_data/lectures.yml
+++ b/web/_data/lectures.yml
@@ -53,6 +53,7 @@
 -
   date: 2018-06-21
   info: Non-negative matrix factorization
+  notes: 2018-06-21.pdf
 -
   date: 2018-06-22
   info: Matrix completion
