Update with lecture notes from Tuesday.

--- a/web/_data/lectures.yml
+++ b/web/_data/lectures.yml
@@ -65,6 +65,7 @@
 -
   date: 2018-06-26
   info: Basics of function approximation
+  notes: 2018-06-26.pdf
 -
   date: 2018-06-27
   info: Many interpretations of kernels
