Update with HW from 6/22 and 6/26.

--- a/hw/Makefile
+++ b/hw/Makefile
@@ -5,7 +5,9 @@ HW= \
 	pdf/2018-06-13.pdf \
 	pdf/2018-06-15.pdf \
 	pdf/2018-06-19.pdf \
-	pdf/2018-06-20.pdf
+	pdf/2018-06-20.pdf \
+	pdf/2018-06-22.pdf \
+	pdf/2018-06-26.pdf
 
 .PHONY: all copy
 all: $(HW)
