--- a/web/_data/lectures.yml
+++ b/web/_data/lectures.yml
@@ -58,6 +58,9 @@
   date: 2018-06-22
   info: Matrix completion
   notes: 2018-06-22.pdf
+  hw:
+    - info: HW 5 (due 07-01)
+      file: 2018-06-22.pdf
 #
 # ==================
 # Week 3
@@ -66,6 +69,9 @@
   date: 2018-06-26
   info: Basics of function approximation
   notes: 2018-06-26.pdf
+  hw:
+    - info: HW 6 (due 07-02)
+      file: 2018-06-26.pdf
 -
   date: 2018-06-27
   info: Many interpretations of kernels
