Add 6/27 notes to repo.

--- a/web/_data/lectures.yml
+++ b/web/_data/lectures.yml
@@ -75,6 +75,7 @@
 -
   date: 2018-06-27
   info: Many interpretations of kernels
+  notes: 2018-06-27.pdf
 -
   date: 2018-06-28
   info: Gaussian processes and kernel learning
