--- a/lec/Makefile
+++ b/lec/Makefile
@@ -11,7 +11,8 @@ LEC= \
 	pdf/2018-06-21.pdf \
 	pdf/2018-06-22.pdf \
 	pdf/2018-06-26.pdf \
-	pdf/2018-06-27.pdf 
+	pdf/2018-06-27.pdf \
+	pdf/2018-06-28.pdf
 
 .PHONY: all copy
 all: $(LEC)
