--- a/web/_data/lectures.yml
+++ b/web/_data/lectures.yml
@@ -79,6 +79,7 @@
 -
   date: 2018-06-28
   info: Gaussian processes and kernel learning
+  notes: 2018-06-28.pdf
 -
   date: 2018-06-29
   info: Scaling kernel methods
