--- a/web/_data/lectures.yml
+++ b/web/_data/lectures.yml
@@ -90,6 +90,7 @@
 -
   date: 2018-07-03
   info: Matrices associated with graphs
+  notes: 2018-07-03.pdf
 -
   date: 2018-07-04
   info: Function approximation on graphs
