Partial notes (placeholder) from 7/4 and 7/5

--- a/lec/Makefile
+++ b/lec/Makefile
@@ -13,7 +13,9 @@ LEC= \
 	pdf/2018-06-26.pdf \
 	pdf/2018-06-27.pdf \
 	pdf/2018-06-28.pdf \
-	pdf/2018-07-03.pdf 
+	pdf/2018-07-03.pdf \
+	pdf/2018-07-04.pdf \
+	pdf/2018-07-05.pdf 
 
 .PHONY: all copy
 all: $(LEC)
