--- a/web/_data/lectures.yml
+++ b/web/_data/lectures.yml
@@ -94,6 +94,7 @@
 -
   date: 2018-07-04
   info: Function approximation on graphs
+  notes: 2018-07-04.pdf
   hw:
     - info: HW 7 (due 07-07)
       file: 2018-07-04.pdf
